syntax = "proto3";

package account_processing.proto;

option csharp_namespace = "ShadowBuddy.Service.Grpc";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service AccountProcessingService{
  rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);
  rpc GetOperations(GetOperationsRequest) returns (GetOperationsResponse);
  rpc GetCategories(google.protobuf.Empty) returns (GetCategoriesResponse);
  rpc GetCurrencies(google.protobuf.Empty) returns (GetCurrenciesResponse);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
  rpc GetUserAccounts(GetUserAccountsRequest) returns (GetUserAccountsResponse);
  rpc CreateAccount(CreateAccountRequest) returns(google.protobuf.Empty);
  rpc UpdateAccount(UpdateAccountRequest) returns(google.protobuf.Empty);
  rpc DeleteAccount(DeleteAccountRequest) returns(google.protobuf.Empty);
  rpc CreateOperation(CreateOperationRequest) returns(google.protobuf.Empty);
  rpc UpdateOperation(UpdateOperationRequest) returns(google.protobuf.Empty);
  rpc DeleteOperation(DeleteOperationRequest) returns(google.protobuf.Empty);
}

message GetAccountsRequest{
  int64 user_id = 1;
}

message GetAccountsResponse{
  repeated Account accounts = 1;
}

message GetOperationsRequest{
  int64 account_id = 1;
  google.protobuf.Timestamp moment = 2;
}

message GetOperationsResponse{
  repeated Operation operations = 1;
}

message GetCategoriesResponse{
  repeated Category categories = 1;
}

message Category{
  int64 id = 1;
  string Name = 2;
  string short_name = 3;
  string label = 4;
}

message Operation{
  int64 id = 1;
  int64 account_id = 2;
  int64 operation_type_id = 3;
  double amount = 4;
  int64 category_id = 5;
  string comment = 6;
  google.protobuf.Timestamp moment = 7;
}

message GetCurrenciesResponse{
  repeated Currency currencies = 1;
}

message Currency{
  int64 id = 1;
  string name = 2;
  string short_name = 3;
  string label = 4;
}

message GetBalanceRequest{
  int64 user_id = 1;
}

message GetBalanceResponse{
  double balance = 1;
}

message GetUserAccountsRequest{
  int64 user_id = 1;
}

message GetUserAccountsResponse{
  repeated Account accounts = 1;
}

message Account{
  int64 account_id = 1;
  int64 currency_id = 2;
  double balance = 3;
  string name = 4;
  google.protobuf.Timestamp initial_date = 5;
}

message CreateAccountRequest{
  int64 user_id = 1;
  string name = 2;
  double balance = 3;
  google.protobuf.Timestamp initial_date = 4;
  int64 currency_id = 5;
  string comment = 6;
}

message GetAccountRequest{
  int64 account_id = 1;
}

message GetAccountResponse{
  string name = 1;
  double balance = 2;
  google.protobuf.Timestamp initial_date = 3;
  int64 currency_id = 4;
}

message UpdateAccountRequest{
  int64 account_id = 1;
  string name = 2;
  double balance = 3;
  google.protobuf.Timestamp initial_date = 4;
  int64 currency_id = 5;
}

message DeleteAccountRequest{
  int64 account_id = 1;
}

message CreateOperationRequest{
  int64 account_id = 1;
  int64 operation_type_id = 2;
  double amount = 3;
  int64 category_id = 4;
  string comment = 5;
  google.protobuf.Timestamp moment = 6;
}

message GetOperationRequest{
  int64 operation_id = 1;
}

message GetOperationResponse{
  int64 operation_type_id = 1;
  double amount = 2;
  int64 category_id = 3;
  string comment = 4;
  google.protobuf.Timestamp moment = 5;
}

message UpdateOperationRequest{
  int64 operation_id = 1;
  int64 operation_type_id = 2;
  double amount = 3;
  int64 category_id = 4;
  string comment = 5;
  google.protobuf.Timestamp moment = 6;
}

message DeleteOperationRequest{
  int64 operation_id = 1;
}